--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --mode development",
+    "dev": "webpack-dev-server --hot --open --mode=development",
     "build": "webpack --mode=production",
     "test": "jest"
   },
@@ -35,8 +35,12 @@
     "jest": "^24.9.0",
     "node-sass": "^4.12.0",
     "prettier": "1.18.2",
+    "react-hot-loader": "^4.12.15",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "stylelint": "^11.1.1",
+    "stylelint-config-recommended-scss": "^4.0.0",
+    "stylelint-scss": "^3.11.1",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1"
