--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --hot --open --mode=development",
-    "build": "webpack --mode=production",
-    "test": "jest"
+    "clear": "rm -rf dist",
+    "dev": "NODE_ENV=development webpack-dev-server --hot --open --mode=development",
+    "build": "NODE_ENV=production npm run clear && webpack --mode=production",
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,8 @@
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/jest-dom": "^4.1.2",
+    "@testing-library/react": "^9.3.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
@@ -33,11 +36,11 @@
     "eslint-plugin-react": "^7.14.3",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "prettier": "1.18.2",
     "react-hot-loader": "^4.12.15",
     "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
     "stylelint": "^11.1.1",
     "stylelint-config-recommended-scss": "^4.0.0",
     "stylelint-scss": "^3.11.1",
