--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clear": "rm -rf dist",
     "dev": "NODE_ENV=development webpack-dev-server --hot --open --mode=development",
     "build": "NODE_ENV=production npm run clear && webpack --mode=production",
+    "deploy": "npm run build && surge dist elite-drum.surge.sh",
     "test": "jest --coverage"
   },
   "keywords": [],
@@ -44,6 +45,7 @@
     "stylelint": "^11.1.1",
     "stylelint-config-recommended-scss": "^4.0.0",
     "stylelint-scss": "^3.11.1",
+    "surge": "^0.21.3",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1"
